# FloorPlanner

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  FloorPlanner.py  LICENSE  README.md  REFACTOR_PLAN.md  TODO.md  _gen_assets.py  fp_extract.py  fp_macro.py  model.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
assets/fonts/: README.md
assets/furnishings/: LICENSE  README.md  groups.json  manifest.json
assets/icons/: README.md
docs/: macro_language.md  make_gallery.py  make_screenshot.py
docs/gallery/: README.md
examples/: README.md  large_site.csv  make_examples.py  sample_plan.json  simple_house.csv
floorplanner/: __init__.py  app.py  catalog.py  config.py  dialogs.py  geometry.py  items.py  macro.py  mainwindow.py  model.py  rooms.py  view.py  walls.py
tests/: README.md  bench_rooms.py  conftest.py  test_about.py  test_ai_pricing.py  test_coalesce.py  test_extract.py  test_floors.py  test_framing.py  test_furnishings.py  test_geometry.py  test_groups.py  test_inventory.py  test_io.py  test_macro.py  test_model.py  test_nudge.py  test_open_walls.py  test_room_walls.py  test_rooms.py  test_selection.py  test_smoke.py  test_undo.py  test_view.py  test_walls.py  test_zorder.py
